hide sensitive info

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -5,8 +5,8 @@
   </tr>
   <% @cars.each do |car| %>
   <tr>
-    <td><%= car["manufacturer"]%></td>
-    <td><%= car["identification_number"]%></td>
+    <td><%= car.manufacturer %></td>
+    <td><%= car.identification_number %></td>
   </tr>
   <% end %>
-</table>
+</table> manufacturer
